test/resources/parser/failing/testStructure7.scala
object MissingArrow {
  x match {
    case 1 "one"
    case _ => "other"
  }
}